@@ -16,7 +16,6 @@ SKSTREAM_VERSION=$SKSTREAM_MAJOR.$SKSTREAM_MINOR.$SKSTREAM_MICRO
 
 AM_INIT_AUTOMAKE(skstream, $SKSTREAM_VERSION)
 AM_CONFIG_HEADER(config.h)
-AM_MAINTAINER_MODE
 
 SKSTREAM_CURRENT=0
 SKSTREAM_REVISION=0
